--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ email-validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.2
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -17,6 +18,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.3
+packaging==24.0
 pydantic==2.7.1
 pydantic-core==2.18.2
 pygments==2.18.0
